--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ name:				         Arnu Pretorius - blog
 title:               Arnu Pretorius - blog
 tagline:             'tagline'
 description:         'Thoughts on learning'
-url:                 https://arnupretorius.github.io
+url:                 https://arnupretorius.github.io/
 rss:                 rss feed url
-baseurl:             'https://arnupretorius.github.io/'
+baseurl:             '/'
 baseurl_posts_img:   '/assets/images/posts/'
 baseurl_featured_img: '/assets/images/hero/'
 baseurl_featured_thumbnail: '/assets/images/thumbnail/'
