--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ google_analytics: UA-XXXXXXXXX # out your google-analytics code
 # -----------------------------------------------------------------------------
 # Blog
 # -----------------------------------------------------------------------------
-blog_name: al-folio
+blog_name: arnupretorius
 blog_description: a simple whitespace theme for academics
 
 # Pagination
@@ -43,7 +43,7 @@ text:
     older: 'Older'
 
 # Comments
-disqus_shortname: al-folio # put your disqus shortname
+disqus_shortname: arnupretorius # put your disqus shortname
 
 # Optional features
 show_social_icons:  false
